2005-06-22  Arjen Markus <arjenmarkus@users.sourceforge.net>

        * statistics.tcl/test/man: 
          Added several methods: 2x2 tables and two quality
          control charts

        * elliptic.tcl/man:
          Added functions cn, dn and sn. Test cases still
          needed.

2005-06-07  Kevin Kenny <kennykb@acm.org>

	* constants.tcl: Corrected ::math::constants::find_huge 
	                 and ::math::constants::find_tiny to not go
			 into an infinite loop when overflow is not an error.
	
2005-05-04  Arjen Markus <arjenmarkus@users.sourceforge.net>

        * Removed reference to argv0 in optimize.tcl (in response
          to a complaint by Bob Techentin)

2005-04-25  Arjen Markus <arjenmarkus@users.sourceforge.net>

        * Corrected documentation of math::product (was math::prod)

2005-03-16  Andreas Kupries <andreask@activestate.com>

	* bigfloat.tcl: Added package require math::bignum. If we use the
	  package we should load it as well.

	* rational_funcs.tcl: Redone entry '2004-11-22 Andreas Kupries
	  <andreask@activestate.com>'. Somehow the source command came
	  back.

2005-03-11  Arjen Markus <arjenmarkus@users.sourceforge.net>

        * Corrected problem with exponential_Ei - doubly defined

2005-01-14  Arjen Markus <arjenmarkus@users.sourceforge.net>

        * Added version 1.0 of Stephane Arnold's bigfloat package
          (newer versions will come later on)

2005-01-10  Andreas Kupries <andreask@activestate.com>

	* bignum.tcl:  Integrated [Tcllib SF Bug 1093414]. Basic bit
	* bignum.test: operations (and, or, xor) on big numbers. Correct
	* bignum.man:  operation is limited to positive numbers (including
	  zero). The basic code was provided by Aamer Aakther
	  <aakther@users.sourceforge.net>, modifications of docs, and
	  small testsuite by myself.

2005-01-05  Arjen Markus <arjenmarkus@users.sourceforge.net>

        * Added tests for matmul (and corrected the implementation)
