@@ -366,7 +366,7 @@ test "Median-1.3" "Median - missing data" -body {
 } -result 1.5
 
 test "test2x2-1.0" "Test 2x2" -match tolerant -body {
-   set data [::math::statistics::test_2x2 170 94 30 6]
+   set data [::math::statistics::test-2x2 170 94 30 6]
 } -result 5.1136364
 
 test "test-xbar-1.0" "Test xbar procedure" -match exact -body {
@@ -376,7 +376,7 @@ test "test-xbar-1.0" "Test xbar procedure" -match exact -body {
     }
     set limits  [::math::statistics::control-xbar $data]
     set newdata {1.0 1.0 1.0 1.0 0.5 0.5 0.5 0.5 10.0 10.0 10.0 10.0}
-    set result  [::math::statistics::test-xbar $limits $newdata]"
+    set result  [::math::statistics::test-xbar $limits $newdata]
 } -result {0 2}
 
 test "test-Rchart-1.0" "Test Rchart procedure" -match exact -body {
@@ -386,7 +386,7 @@ test "test-Rchart-1.0" "Test Rchart procedure" -match exact -body {
     }
     set limits  [::math::statistics::control-Rchart $data]
     set newdata {0.0 1.0 2.0 1.0 0.4 0.5 0.6 0.5 10.0  0.0 10.0 10.0}
-    set result  [::math::statistics::test-Rchart $limits $newdata]"
+    set result  [::math::statistics::test-Rchart $limits $newdata]
 } -result {0 2}
 
 # End of test cases
