@@ -1,3 +1,8 @@
+2005-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* statistics.test: Corrected typos in the test suite for the new
+	  commands.
+
 2005-06-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
 
         * statistics.tcl/test/man: 
